cabal-version:       2.4
name:                checked-exceptions
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MPL-2.0
license-file:        LICENSE
author:              sheepfleece
maintainer:          rowanmorrison@protonmail.ch
-- copyright:
category:            Control, Exceptions, Monad
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Control.Monad.Throw
  build-depends:       base ^>=4.12.0.0

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs:      src

test-suite checked-exceptions-test
  main-is: Tests.hs
  other-modules:             Control.Monad.Throw.Tests
  build-depends:       
    base ^>=4.12.0.0,
    checked-exceptions, 

    test-framework, 
    QuickCheck
  ghc-options: -Wall -fwarn-tabs -O2

  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
