cabal-version:       2.4
name:                checked-exceptions
version:             0.1.0.0
synopsis:            Type safe synchronous exceptions
description:         
  Type safe synchronous exceptions.
license:             MPL-2.0
license-file:        LICENSE
author:              sheepfleece
maintainer:          rowanmorrison@protonmail.ch
homepage:            https://github.com/sheepfleece/checked-exceptions
category:            Control, Exceptions, Monad
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/sheepfleece/checked-exceptions 


library
  exposed-modules:     Control.Monad.Throw
  build-depends:       
    base ^>=4.12.0.0,
    mtl

  ghc-options: -Wall -fwarn-tabs 
  hs-source-dirs:      src
  default-language: Haskell2010

test-suite checked-exceptions-test
  main-is: Tests.hs
  other-modules:             
    Simple
    Reader
  build-depends:       
    base ^>=4.12.0.0,
    checked-exceptions, 
    mtl

  ghc-options: -fwarn-tabs
  default-language: Haskell2010

  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, examples
